--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.8",
     "react-router-dom": "^6.9.0"
   },
   "devDependencies": {
