--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
     "@iconscout/react-unicons": "^2.0.0",
-    "@iconscout/react-unicons-solid": "^1.0.0",
+    "@tanstack/react-query": "^4.28.0",
+    "@tanstack/react-query-devtools": "^4.28.0",
     "antd": "^5.3.2",
+    "axios": "^1.3.4",
+    "js-cookie": "^3.0.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.43.8",
